--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Action to generate GitHub profile readme repos pin based on Topics",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node index.js",
     "lint": "eslint .",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
     "test": "jest",
@@ -26,7 +28,9 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@octokit/core": "^5.0.0",
+    "@octokit/plugin-paginate-rest": "^8.0.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
