--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,18 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: github-profile-pinned-action
+description: Update README.md with repos categorized by topic
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  username:
+    description: git username
     required: true
-    default: '1000'
-outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
+  email:
+    description: git user email address
+    required: true
+  repository:
+    description: the repository to update its readme
+    required: true
+  topics:
+    description: list of topics to categorize by, separated by line breaks
+    required: true
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: "node20"
+  main: "dist/index.js"
