--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@octokit/core": "^5.0.0",
-    "@octokit/plugin-paginate-rest": "^8.0.0"
+    "@octokit/plugin-paginate-rest": "^8.0.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
