updated action metadata

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,9 @@
 name: github-readme-topics-action
 description: Update GitHub profile README.md with categorized repos based on their Topics
+author: "metaory <metaory@gmail.com>"
+branding:
+  icon: "bookmark"
+  color: "orange"
 inputs:
   TOPICS:
     description: list of topics to categorize by, separated by line breaks
@@ -8,10 +12,10 @@ inputs:
     description: git user email address
     required: true
   USERNAME:
-    description: git username
+    description: OPTIONAL; git username; defaults to repository owner
     required: false
   REPOSITORY:
-    description: the repository to update its readme
+    description: OPTIONAL; the repository to update its readme; defaults to current repository
     required: false
 runs:
   using: "node16"
