--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/metaory/github-readme-topics-action.git"
   },
   "keywords": [
     "GitHub",
-    "",
+    "Readme",
+    "Topics",
     "Actions",
     "JavaScript"
   ],
   "author": "metaory <metaory@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/metaory/github-readme-topics-action/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/metaory/github-readme-topics-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@octokit/core": "^5.0.0",
@@ -34,8 +35,6 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.37.0",
-    "jest": "^29.5.0"
+    "@vercel/ncc": "^0.36.1"
   }
 }
